--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -22,14 +22,85 @@
     font-size: 1.3rem;
 }
 
-
+.chef_sign{
+    display: flex;
+   justify-content: space-between;
+   align-items: center;
+   gap: 5rem;
+   /* border: 2px solid white; */
+   width: 100%;
+}
 .chef_sign>img{
-    margin-top: 1rem;
+    
+    height: 50%;
+    width: 50%;
+    margin-bottom: 2rem;
 }
 
-.chef_sign>p{
+.texts{
+    /* border: 2px solid white; */
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    width: 20rem;
+    
+}
+
+.texts>p{
     color: var(--color-golden);
     font-family: var(--font-base);
     font-size: 1.5rem;
     font-weight: semi-bold;
+    white-space: nowrap;
+}
+
+
+@media screen and (max-width:600px) {
+    .chef_content_quote>img{
+        height: 1.5rem;
+        width: 2rem;
+
+    }
+    .chef_sign{
+        gap: 1rem;
+    }
+    .chef_sign>img{
+        width: 50%;
+
+    }
+    
+}
+
+@media screen and (max-width:500px){
+    .chef_content_quote>img{
+        height: 1.5rem;
+        width: 2rem;
+
+    }
+    .chef_sign{
+        gap: 0.01rem;
+    }
+    .chef_sign>img{
+        margin-top: 3rem;
+        width: 40%;
+
+    }
+
+}
+
+@media screen and (max-width:400px) {
+    .chef_content_quote>img{
+        height: 1.5rem;
+        width: 2rem;
+
+    }
+    .chef_sign{
+        gap: 0.01rem;
+    }
+    .chef_sign>img{
+        margin-top: 3rem;
+        width: 40%;
+
+    }
+    
 }
